--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -31,7 +31,7 @@
       <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
     </div>
 
-    <div class="">
+    <div class="top-image">
       <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
     </div>
 
@@ -43,103 +43,112 @@
         facilisis iaculis.</p>
     </section>
 
-    <hr>
+    <hr class="top-line">
 
-    <setcion class="main-content">
-      <div class="main-content-sections">
-        <h2>Digital Design</h2>
-
-        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
-          neque, sed faucibus nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.</p>
-
-        <button>Learn More</button>
-      </div>
-
+    <section class="main-content">
 
       <div class="main-content-sections">
-        <h2>UX / UI</h2>
-
-        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
-          neque, sed faucibus nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.</p>
-
-        <button>Learn More</button>
-      </div>
-
-      <div class="main-content-sections">
-        <h2>Digital Marketing</h2>
-
-        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
-          neque, sed faucibus nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.<p>
-
-            <button>Learn More</button>
-      </div>
-
-      <div class="main-content-sections">
-        <h2>Web Development</h2>
-
-        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
-          neque, sed faucibus nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.<p>
-
-            <button>Learn More</button>
-      </div>
-
-      <div class="main-content-sections">
-        <h2>iOS Development</h2>
-
-        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
-          neque, sed faucibus nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.<p>
-
-            <button>Learn More</button>
-      </div>
-
-      <div class="main-content-sections">
-        <h2>Android Development</h2>
-
-        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
-          neque, sed faucibus nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.<p>
-
-            <button>Learn More</button>
-      </div>
-
-    </setcion>
-
-    <hr>
-
-    <footer class="services-footer">
-      <h2>Some Facts About Our Services<h2>
+        <div class="text-style">
+          <h2>Digital Design</h2>
 
           <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
             Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
             neque, sed faucibus nibh pellentesque
             eleifend. Mauris euismod facilisis iaculis.</p>
+        </div>
+        <button>Learn More</button>
+      </div>
 
-          <ul>
-            <li>Awesome thing</li>
-            <li>Amazing thing</li>
-            <li>Cool thing</li>
-            <li>Great thing</li>
-          </ul>
+      <div class="main-content-sections">
+        <div class="text-style">
+          <h2>UX / UI</h2>
 
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+            Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+            neque, sed faucibus nibh pellentesque
+            eleifend. Mauris euismod facilisis iaculis.</p>
+        </div>
+        <button>Learn More</button>
+      </div>
+
+      <div class="main-content-sections">
+        <div class="text-style">
+          <h2>Digital Marketing</h2>
+
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+            Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+            neque, sed faucibus nibh pellentesque
+            eleifend. Mauris euismod facilisis iaculis.<p>
+        </div>
+        <button>Learn More</button>
+      </div>
+
+      <div class="main-content-sections">
+        <div class="text-style">
+          <h2>Web Development</h2>
+
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+            Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+            neque, sed faucibus nibh pellentesque
+            eleifend. Mauris euismod facilisis iaculis.<p>
+        </div>
+        <button>Learn More</button>
+      </div>
+
+      <div class="main-content-sections">
+        <div class="text-style">
+          <h2>iOS Development</h2>
+
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis
+            tortor.
+            Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+            neque, sed faucibus nibh pellentesque
+            eleifend. Mauris euismod facilisis iaculis.<p>
+        </div>
+        <button>Learn More</button>
+      </div>
+
+      <div class="main-content-sections">
+        <div class="text-style">
+          <h2>Android Development</h2>
+
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis
+            tortor.
+            Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+            neque, sed faucibus nibh pellentesque
+            eleifend. Mauris euismod facilisis iaculis.<p>
+        </div>
+        <button>Learn More</button>
+      </div>
+
+    </section>
+
+    <hr class="bottom-line">
+
+    <footer class="services-footer-content">
+      <div class="facts-and-img">
+        <div class="facts-text">
+          <h2>Some Facts About Our Services<h2>
+
+              <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis
+                tortor.
+                Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+                neque, sed faucibus nibh pellentesque
+                eleifend. Mauris euismod facilisis iaculis.</p>
+              <ul>
+                <li>Awesome thing</li>
+                <li>Amazing thing</li>
+                <li>Cool thing</li>
+                <li>Great thing</li>
+              </ul>
+        </div>
+        <div class="services-img">
           <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-          <p class="copyright">Copyright Great Idea! 2018<p>
+        </div>
+      </div>
+      <p class="copyright">Copyright Great Idea! 2018<p>
 
     </footer>
-
-  </div>
-
 </body>
 
 </html>
