--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -28,11 +28,14 @@
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
       </nav>
+      <a href="index.html">
       <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+      </a>
     </div>
 
     <div class="top-image">
       <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+
     </div>
 
     <section class="services">
